Fix Information section alignment

--- a/styles.css
+++ b/styles.css
@@ -64,7 +64,7 @@ body {
     transition: 0.3s;
 }
 
-button:hover {
+.heading-button:hover {
     cursor: pointer;
     background-color: #285bad;
     box-shadow: 5px 10px #292929;
@@ -86,23 +86,40 @@ button:hover {
 #content {
     display: flex;
     flex-direction: column;
+    align-items: center;
+    gap: 24px;
     padding: 32px 170px 100px 170px;
     margin-top: 0px;
+}
+
+#content .information-content {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 16px;
+}
+
+#content .information-content .info p {
+    text-align: center;
 }
 
 .content-title {
     font-size: 36px;
     font-family: 'roboto', 'sans-sherif';
     color: #1F2937;
-    text-align: center;
+    /* text-align: center; */
     margin-bottom: 64px;
 }
 
 .information-content {
     display: flex;
-    /* flex-direction: column; */
+    flex-direction: row;
     /* align-items: center; */
     justify-content: space-between;
+}
+
+.information-content .info {
+    gap: 160px;
 }
 
 .information-content img {
@@ -116,7 +133,7 @@ button:hover {
 
 .info p {
     font-size: 20px;
-    width: 300px;
+    width: 360px;
     text-align: center;
     color: #1F2937;
 }
@@ -132,4 +149,10 @@ button:hover {
     text-decoration: none;
     border: none;
     transition: 0.3s;
+}
+
+.info-button:hover {
+    cursor: pointer;
+    background-color: #285bad;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
